@@ -1,3 +1,7 @@
+Thu Nov 14 19:49 2013 CDT
+    * www/assets/js/callbacks.js: Fix AFK users on join and profile
+      updates.
+
 Wed Nov 13 22:35 2013 CDT
     * www/assets/js/util.js, www/assets/js/ui.js,
       www/assets/js/callbacks.js, www/channel.html:
